--- a/src/App.css
+++ b/src/App.css
@@ -5,18 +5,24 @@
 }
 
 .navbar{
-  width: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content:flex-start;
+  width: 550px;
   height: 100vh;
-  background-color: antiquewhite;
+  background-color: whitesmoke;
 }
 
 section{
   width:100%;
-  background-color: aqua;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: white;
 }
 
 aside{
-  width: 500px;
-  background-color: gray;
+  width: 700px;
+  background-color: whitesmoke;
 
 }
