--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -1,5 +1,41 @@
 .greeting{
-    background-color: white;
-    margin: 10px;
+    background-color: rgb(230, 230, 230);
+    margin: 10px 30px 10px 30px;
+    padding: 10px 20px 10px 20px;
+    border: 4px solid rgb(200, 200, 200);
+}
+
+.greeting h4, .levelUp h4{
+    font-weight: 300;
+    font-size: 0.8rem;
+    margin-top: 0.5rem;
+    margin-bottom: 1rem;
+}
+
+.navigation{
+    display: flex;
+    flex-direction: column;
+    /* border: 1px solid red; */
+    margin: 10px 30px 10px 30px;
     padding: 10px;
+}
+
+.linkList{
+    display:flex;
+    width:100%;
+    align-items: center;
+    margin: 10px 0px 10px 0px;
+}
+
+.link{
+    margin-left: 1rem;
+    text-decoration: none;
+    font-size: 1.25rem;
+}
+
+.levelUp{
+    background-color: rgb(230, 230, 230);
+    margin: 10px 30px 10px 30px;
+    padding: 20px;
+    border: 4px solid rgb(200, 200, 200);
 }
