--- a/src/components/ScreenMid/ActivityCard.module.css
+++ b/src/components/ScreenMid/ActivityCard.module.css
@@ -1,3 +1,11 @@
 .card{
-    border: 1px solid red;
+    background-color: rgb(230, 230, 230);
+    border: 2px solid rgb(200, 200, 200);
+    width: 520px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px;
+    margin: 5px;
 }
