--- a/src/components/Sidebar.module.css
+++ b/src/components/Sidebar.module.css
@@ -1,16 +1,39 @@
+.searchbar{
+    margin: 15px 15px 15px 0px;
+    border: 2px solid gray;
+}
+
 .news{
-    background-color: wheat;
-    padding: 10px;
-    margin: 10px;
+    background-color: rgb(230, 230, 230);
+    margin: 10px 30px 10px 30px;
+    padding: 10px 20px 10px 20px;
+    border: 4px solid rgb(200, 200, 200);
+}
+
+.linkText{
+    font-size: 1.2rem;
+    margin: 50px 0px 10px 30px;
 }
 
 .link_container{
-    background-color: wheat;
-    padding: 10px;
-    margin: 10px;
+    background-color: rgb(230, 230, 230);
+    margin: 10px 30px 10px 30px;
+    padding: 10px 20px 10px 20px;
+    border: 4px solid rgb(200, 200, 200);
 }
 
 .link{
-    border: 1px solid black;
+    border: 2px solid rgb(200, 200, 200);
     margin-top: 10px;
+    padding: 10px;
+}
+
+.link h6{
+    font-weight: 300;
+    font-size: 0.8rem;
+}
+
+.link h4{
+    font-weight: 500;
+    font-size: 1rem;
 }
