--- a/src/components/ScreenMid/Card/FlightpathCard.module.css
+++ b/src/components/ScreenMid/Card/FlightpathCard.module.css
@@ -8,14 +8,21 @@
 .main{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     align-items: center;
     padding: 15px;
+}
+
+.main .mainTitle{
+    margin-left: 20px;
 }
 
 .main .button{
     color:black;
     border-style: none;
+    margin: 0px 10px 0px 10px;
+    padding: 5px 10px 5px 10px;
+    border: 1px solid darkgray;
 }
 
 .main h4{
@@ -32,6 +39,7 @@
 .rightSection{
     display: flex;
     flex-direction: row;
-    align-items: center;
     justify-content: space-around;
+    align-items: center;
+    margin-left: auto;
 }
