--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
   justify-content:flex-start;
   width: 550px;
   height: 100vh;
-  background-color: whitesmoke;
+  background-color: white;
 }
 
 section{
@@ -24,6 +24,6 @@ section{
 
 aside{
   width: 700px;
-  background-color: whitesmoke;
+  background-color: white;
 
 }
