--- a/src/components/ScreenMid/MyProducts.module.css
+++ b/src/components/ScreenMid/MyProducts.module.css
@@ -1,7 +1,7 @@
 .container{
-    width: 100%;
-    /* max-height: 300px; */
+    max-width: 100%;
     padding: 15px;
+    overflow:hidden;
 }
 
 .cardContainer{
